--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-htmlmin": "^3.0.0",
     "gulp-if": "^2.0.2",
     "gulp-inject": "^4.2.0",
+    "gulp-insert": "^0.5.0",
     "gulp-jshint": "^2.0.4",
     "gulp-preprocess": "^2.0.0",
     "gulp-uglify": "^2.1.2",
