Test circleci build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,11 +26,11 @@ jobs:
           - v1-dependencies-
 
       - run: yarn install
-      
+
       - save_cache:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
         
       # run tests!
-      - run: gulp build-index
+      - run: npx gulp build-index
